--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -51,6 +51,14 @@ $black: #2b2523
     justify-content: center
     align-items: center
 
+.album-image
+  width: 100%
+  height: 500px
+  display: flex
+  justify-content: center
+  align-items: center
+  background-size: cover
+
 .btn
     display: inline-block
     padding: 12px 16px 10px
