album-image div containers now resize according to their image aspect ratio

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -53,7 +53,7 @@ $black: #2b2523
 
 .album-image
   width: 100%
-  height: 500px
+  // height: 500px // fixed this because on mobile 500px is way too much
   display: flex
   justify-content: center
   align-items: center
